--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="letters">
-        <button class="letter-1">1</button>
-        <button class="letter-2">2</button>
-        <button class="letter-3">3</button>
-        <button class="letter-4">4</button>
-        <button class="letter-5">5</button>
-    </div>
+    <select class="letters">
+        <option class="letter-1">A</option>
+        <option class="letter-2">A</option>
+        <option class="letter-3">A</option>
+        <option class="letter-4">A</option>
+        <option class="letter-5">A</option>
+    </select>
     <div class="names">
-        
     </div>
     <script src="./script.js"></script>
 </body>
