--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <select class="letters">
+        <option>Choose a letter</option>
         <option class="letter-1">A</option>
         <option class="letter-2">A</option>
         <option class="letter-3">A</option>
